[package]
name = "minecs_common"
version = "0.1.0"
edition = "2021"
authors = [ "Sarchimor" ]
license = "MIT OR Apache-2.0"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.15"
serde = { version = "1.0", features = [ "derive" ], optional = true }

# --Features

[features]
default = [ "serde" ]
serde = [ "dep:serde" ]
