[package]
name = "minecs_macro"
version = "0.1.0"
edition = "2021"
authors = [ "Sarchimor" ]
license = "MIT OR Apache-2.0"
rust-version = "1.77"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = [ "extra-traits" ] }
minecs_common = { path = "../minecs_common" }
